Closed Bug 894288 Opened 11 years ago Closed 11 years ago

nsLayoutUtils::FindContentFor aborts when loading any tab

Categories

(Core :: Graphics: Layers, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla25

People

(Reporter: derf, Assigned: kats)

References

Details

Attachments

(1 file)

The ABORT_IF_FALSE on line 445 is triggering. From a cursory inspection of the two callers, it appears they special-case ROOT_SCROLL_ID, but not NULL_SCROLL_ID, so it seems possible the latter could be passed in to FindContentFor and trigger the abort. Reverting to <https://hg.mozilla.org/mozilla-central/rev/d16f5d0295ef> makes the problem go away. Going forward to <https://hg.mozilla.org/mozilla-central/rev/a55236cbafd6> makes it come back, so this is a regression from bug 864447.
Blocks: multi-apzc
Attached patch PatchSplinter Review
I'll be cleaning up this code anyway; sticking in a guard for now.
Assignee: nobody → bugmail.mozilla
Attachment #781109 - Flags: review?(bgirard)
Comment on attachment 781109 [details] [diff] [review] Patch Review of attachment 781109 [details] [diff] [review]: ----------------------------------------------------------------- I'm ok with this. If you don't plan on cleaning this up within a few weeks it might be worth adding a comment on why it's there.
Attachment #781109 - Flags: review?(bgirard) → review+
I already have some patches in my queue to do this more properly, that will be part of my new patchset on bug 866232. https://hg.mozilla.org/integration/mozilla-inbound/rev/cdf2423ff693
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla25
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: