Bug 894288 - Prevent triggering an endless abort cycle when loading any tabs in the browser. r=BenWa